--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         - NEW_TASK_SUBMITTED 
 -->
     <header>
-        <h1> Task Tracker - Organize Your Life </h1>
+        <h1> Today's To Do List</h1>
         <form id="add_a_task_form">
-            <input type="text" id="new_task_added" placeholder="What task did you want to add?" />
+            <input type="text" id="new_task_added" placeholder="Add A Task" />
             <input type="submit" id="new_task_submitted" value="Add Task" />
         </form>
     </header>
@@ -30,7 +30,7 @@
 -->
     <main>
         <section class="task_list_section">
-            <h2> Tasks to Complete </h2>
+            <h2> Unfinished Tasks: </h2>
 
             <!--    The below has to do with building out the section where all the added tasks will live. 
                     The read only attribute will make it so we can't erase everything. -->
